--- a/ui.html
+++ b/ui.html
@@ -12,7 +12,7 @@
       .container {
         background: #fff;
         border-radius: 16px;
-        box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.07);
         padding: 24px 20px 20px 20px;
         max-width: 400px;
         margin: 0 auto;
@@ -29,33 +29,34 @@
         margin-bottom: 8px;
         font-size: 16px;
         border-radius: 22px;
-        width:100%;
+        width: 100%;
       }
-      .input-field{
+      .input-field {
         border: 1px solid rgb(235, 235, 235);
         border-radius: 6px;
         padding: 8px;
-        width: 200px
+        width: 200px;
       }
-      .select-container
-      {
-        margin-bottom: 8px; 
+      .select-container {
+        margin-bottom: 8px;
       }
-      .select-field{
+      .select-field {
         border: 1px solid rgb(235, 235, 235);
         border-radius: 6px;
         padding: 8px 0px;
         width: 76px;
       }
-      select{
-        width:100px;
+      select {
+        width: 100px;
       }
-      input[type=\"password\"], input[type=\"text\"] {
+      input[type=\"password\"],
+      input[type=\"text\"] {
         flex: 1;
         outline: none;
         transition: border 0.2s;
       }
-      input[type=\"password\"]:focus, input[type=\"text\"]:focus {
+      input[type=\"password\"]:focus,
+      input[type=\"text\"]:focus {
         border: 1px solid #bababa;
       }
       button {
@@ -73,14 +74,14 @@
       button:hover {
         background: #000000;
       }
-      .outline{
+      .outline {
         background-color: #fff;
-        border:1px solid #d1d1d1;
+        border: 1px solid #d1d1d1;
         color: #222;
       }
-      .outline:hover{
+      .outline:hover {
         background-color: #f0f0f0;
-        border:1px solid #d1d1d1;
+        border: 1px solid #d1d1d1;
         color: #222;
       }
       .desc {
@@ -94,24 +95,30 @@
         color: #8794a5;
         text-align: left;
         margin-bottom: 16px;
-        line-height:16px;
+        line-height: 16px;
       }
-      .prompt-box{
+      .prompt-box {
         background-color: #f5f5f7;
-        padding:8px;
+        padding: 8px;
         border-radius: 4px;
       }
-      .subtitle{
-        margin-top:32px;
-        font-size:14px;
+      .subtitle {
+        margin-top: 32px;
+        font-size: 14px;
       }
     </style>
   </head>
   <body>
     <div class="container">
       <h2>AI 아이콘 생성기</h2>
-      <div class="desc">OpenAI API 키 입력 후 원하는 아이콘을 생성해 보세요.</div>
-      <div class="body-3">"사용자별 API 키 직접 입력" 방식은 사용자가 입력한 키를 figma.clientStorage 에 저장하여 서버 없이도 보안을 유지할 수 있고, 각 사용자가 본인 키로 안전하게 사용할 수 있습니다.</div>
+      <div class="desc">
+        OpenAI API 키 입력 후 원하는 아이콘을 생성해 보세요.
+      </div>
+      <div class="body-3">
+        "사용자별 API 키 직접 입력" 방식은 사용자가 입력한 키를
+        figma.clientStorage 에 저장하여 서버 없이도 보안을 유지할 수 있고, 각
+        사용자가 본인 키로 안전하게 사용할 수 있습니다.
+      </div>
       <div class="select-container">
         <select class="select-field" id="api-type">
           <option value="openai">OpenAI</option>
@@ -119,60 +126,86 @@
         </select>
       </div>
       <div class="input-row">
-        <input class="input-field" id="api-key" type="password" placeholder="API Key" />
+        <input
+          class="input-field"
+          id="api-key"
+          type="password"
+          placeholder="API Key"
+        />
         <button class="outline" id="save-key">API Key 저장</button>
       </div>
       <div class="input-row">
-        <input class="input-field" id="prompt" type="text" placeholder="예: 돋보기 아이콘을 만들어줘" />
+        <input
+          class="input-field"
+          id="prompt"
+          type="text"
+          placeholder="예: 돋보기 아이콘을 만들어줘"
+        />
         <button id="generate">아이콘 생성</button>
       </div>
     </div>
     <script>
       // API 키 저장
-      document.getElementById('save-key').onclick = () => {
-        const apiKey = document.getElementById('api-key').value;
-        const apiType = document.getElementById('api-type').value;
-        parent.postMessage({ pluginMessage: { type: 'save-api-key', apiKey, apiType } }, '*');
-        alert(apiType.toUpperCase() + ' API 키가 저장되었습니다.');
+      document.getElementById("save-key").onclick = () => {
+        const apiKey = document.getElementById("api-key").value;
+        const apiType = document.getElementById("api-type").value;
+        parent.postMessage(
+          { pluginMessage: { type: "save-api-key", apiKey, apiType } },
+          "*"
+        );
+        alert(apiType.toUpperCase() + " API 키가 저장되었습니다.");
       };
 
       // 아이콘 생성
-      document.getElementById('generate').onclick = () => {
-        const prompt = document.getElementById('prompt').value;
-        const apiType = document.getElementById('api-type').value;
+      document.getElementById("generate").onclick = () => {
+        const prompt = document.getElementById("prompt").value;
+        const apiType = document.getElementById("api-type").value;
         // 버튼 비활성화 및 로딩 표시
-        const btn = document.getElementById('generate');
+        const btn = document.getElementById("generate");
         btn.disabled = true;
-        btn.textContent = '로딩 중...';
-        parent.postMessage({ pluginMessage: { type: 'generate-icon', prompt, apiType } }, '*');
+        btn.textContent = "로딩 중...";
+        parent.postMessage(
+          { pluginMessage: { type: "generate-icon", prompt, apiType } },
+          "*"
+        );
       };
 
       // 드롭다운 변경 시 clientStorage에 저장 및 API Key 요청
-      document.getElementById('api-type').onchange = () => {
-        const apiType = document.getElementById('api-type').value;
-        parent.postMessage({ pluginMessage: { type: 'save-api-type', apiType } }, '*');
-        parent.postMessage({ pluginMessage: { type: 'get-api-key', apiType } }, '*');
+      document.getElementById("api-type").onchange = () => {
+        const apiType = document.getElementById("api-type").value;
+        parent.postMessage(
+          { pluginMessage: { type: "save-api-type", apiType } },
+          "*"
+        );
+        parent.postMessage(
+          { pluginMessage: { type: "get-api-key", apiType } },
+          "*"
+        );
       };
 
       // 플러그인 실행 시 드롭다운 값 요청
-      document.addEventListener('DOMContentLoaded', () => {
-        parent.postMessage({ pluginMessage: { type: 'get-api-type' } }, '*');
+      document.addEventListener("DOMContentLoaded", () => {
+        parent.postMessage({ pluginMessage: { type: "get-api-type" } }, "*");
       });
 
       // 드롭다운 값 및 API Key 반영
       window.onmessage = (event) => {
-        const { apiType, apiKey, generationDone } = event.data.pluginMessage || {};
+        const { apiType, apiKey, generationDone } =
+          event.data.pluginMessage || {};
         if (apiType) {
-          document.getElementById('api-type').value = apiType;
-          parent.postMessage({ pluginMessage: { type: 'get-api-key', apiType } }, '*');
+          document.getElementById("api-type").value = apiType;
+          parent.postMessage(
+            { pluginMessage: { type: "get-api-key", apiType } },
+            "*"
+          );
         }
         if (apiKey !== undefined) {
-          document.getElementById('api-key').value = apiKey || '';
+          document.getElementById("api-key").value = apiKey || "";
         }
         if (generationDone) {
-          const btn = document.getElementById('generate');
+          const btn = document.getElementById("generate");
           btn.disabled = false;
-          btn.textContent = '아이콘 생성';
+          btn.textContent = "아이콘 생성";
         }
       };
     </script>
